Drivers color not showing up in shapekeys values anymore #54524

Closed
opened 2018-04-04 15:42:05 +02:00 by Juan Pablo Bouza · 7 comments

This happens in the master branch. I'm attaching an image. As you can see, there are three shapekeys, I added drivers to all of them, but the purple color is only showing on the selected shapekey. Drivers still work, this seems to be just a visual issue.

image.png

This happens in the master branch. I'm attaching an image. As you can see, there are three shapekeys, I added drivers to all of them, but the purple color is only showing on the selected shapekey. Drivers still work, this seems to be just a visual issue. ![image.png](https://archive.blender.org/developer/F2597394/image.png)
Author
Member

Added subscriber: @jpbouza-4

Added subscriber: @jpbouza-4
Author
Member

Added subscribers: @dr.sybren, @ideasman42

Added subscribers: @dr.sybren, @ideasman42
Member

Added subscribers: @JoshuaLeung, @lichtwerk

Added subscribers: @JoshuaLeung, @lichtwerk
Joshua Leung was assigned by Philipp Oeser 2018-04-05 09:43:07 +02:00
Member

Can confirm this. 2.79b doesnt have the issue. @JoshuaLeung: one for you?

Can confirm this. 2.79b doesnt have the issue. @JoshuaLeung: one for you?
Joshua Leung was unassigned by Philipp Oeser 2018-04-05 13:13:50 +02:00
Julian Eisel was assigned by Philipp Oeser 2018-04-05 13:13:50 +02:00
Member

caused by 357b72e0a7

caused by 357b72e0a7

This issue was referenced by 728e92422e

This issue was referenced by 728e92422ef3ec97a72db37572146498280e730e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54524
No description provided.