Fix T54524: keyframe and driver colors not showing in shape key list.

This reverts commit 357b72e0a7d4a270bf1273102595446ccca16259 which caused
the issue, we need a better fix for that cosmetic issue from T50862. For
now displaying keyframes and drivers is the more important one.